--- a/landing.html
+++ b/landing.html
@@ -24,3 +24,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- PSEUDOCODE -->
+<!-- create navbar with logo image - link to go to homepage (left side); get in touch (right side) -->
+<!-- hero section with background image of the city + a card with the name of the city, country and short description of a place -->
+<!-- first row: 2 columns: card with points of interest and card with weather info -->
+<!-- second row: 2 columns: card with things to do and card with movies -->
+<!-- *carousel with suggested cities -->
+<!-- footer: social media buttons, copyrights -->
