Added working OpenWeatherMapAPI for today weather

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
     <img class="d-block mx-auto mb-4" src="../FilmPath-Tastes/assets/img/logo.png" alt="" width="400" height="400">
     <h1 class="display-5 fw-bold text-body-emphasis">Which city you want to visit?</h1>
     <div class="col-lg-6 mx-auto">
-      <input type="text" class="form-control m-3" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">I feel lucky!</button>
-      </div>
+      <form id="cityForm">
+        <input type="text" id="cityInput" class="form-control m-3" aria-label="City name" aria-describedby="inputGroup-sizing-default">
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
+          <button type="button" class="btn btn-outline-secondary btn-lg px-4">I feel lucky!</button>
+        </div>
+      </form>
     </div>
   </div>
 
