Added fucntion for IFEELLUCKY button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <input type="text" id="cityInput" class="form-control m-3" aria-label="City name" aria-describedby="inputGroup-sizing-default">
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
           <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">I feel lucky!</button>
+          <button type="button" id="luckyButton" class="btn btn-outline-secondary btn-lg px-4">I feel lucky!</button>
         </div>
       </form>
     </div>
