--- a/landing.html
+++ b/landing.html
@@ -13,16 +13,68 @@
       </head>
 <body>
     
+<nav class="navbar bg-body-tertiary container-fluid">
+          <a class="navbar-brand" href="index.html"><img src="./assets/img/logo.png" alt="logo image" class="landingLogo"></a>
+          <h3 class="catchfrase">CurioCity</h3>
+    </nav>
+
+    <section class="hero">
+        <h2>Paris, France</h2>
+        <p>The Eiffel Tower was supposed to be a temporary installation, intended to stand for 20 years after being built for the 1889 World Fair.</p>
+    </section>
+
+    <section>
+        <div class="row">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+              <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
 
     
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./assets/js/amadeus.js"></script>
-    <script src="./assets/js/weather.js"></script>
-    <script src="./assets/js/movies.js"></script>
+    <script src="./assets/js/script.js"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!-- PSEUDOCODE -->
+<!-- create navbar with logo image - link to go to homepage (left side); get in touch (right side) -->
+<!-- hero section with background image of the city + a card with the name of the city, country and short description of a place -->
+<!-- first row: 2 columns: card with points of interest and card with weather info -->
+<!-- second row: 2 columns: card with things to do and card with movies -->
+<!-- *carousel with suggested cities -->
+<!-- footer: social media buttons, copyrights -->
