styling added to html & css

--- a/landing.html
+++ b/landing.html
@@ -15,30 +15,26 @@
 </head>
 
 <body>
-<!-- Navigation Bar -->
-  <nav class="navbar bg-body-tertiary container-fluid">
-    <div class="row nav-bar-container">
-      <div class="col-1">
-        <a class="landing-logo" href="index.html">
-          <img src="./assets/img/logo.png" alt="logo" width="60" class="d-inline-block align-text-top">
-        </a>
-      </div>
-      <div class="col-8">
-        <h3>Embark on a Journey of Wonders with CurioCity!</h3>
-      </div>
-      <div class="col-3">
-        <button class="navbar-button" a href="#">Get in touch</button>
-      </div>
+  <!-- Navigation Bar -->
+
+  <nav class="navbar bg-body-tertiary">
+    <div class="container">
+      <a class="landing-logo" href="index.html">
+        <img src="./assets/img/logo.png" alt="logo" width="60" class="d-inline-block align-text-top">
+      </a>
+      <h3>Embark on a Journey of Wonders with CurioCity!</h3>
+      <button class="navbar-button" a href="#">Get in touch</button>
     </div>
   </nav>
-<!-- Navigation Bar -->
+  <!-- Navigation Bar Ends -->
 
-<!-- Hero Section -->
+  <!-- Hero Section -->
   <section class="hero container-fluid text-center">
-    <div class="container">
-      <div class="welcome">
-        <h2 class="destination-title">Paris, France</h5>
-        <p class="destination-description">The Eiffel Tower was supposed to be a temporary installation, intended to stand for 20 years after being built
+    <div class="welcome">
+      <div id="welcome-text">
+        <h2 class="destination-title">Paris, France</h2>
+        <p class="destination-description">The Eiffel Tower was supposed to be a temporary installation, intended to
+          stand for 20 years after being built
           for the 1889 World Fair.</p>
       </div>
     </div>
