--- a/landing.html
+++ b/landing.html
@@ -41,94 +41,58 @@
   </section>
   <!-- End of Hero Section -->
 
-  <section>
-    <div class="row">
-      <div class="card" style="width: 18rem;">
+  <section class="container-fluid mb-5">
+    <div class="d-flex flex-row">
+
+      <div id="points-of-interest" class="card w-75 mt-4 me-5">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">Points of interest</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+
+      <div id="weather" class="card w-25 mt-4">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Weather</h5>
+          <h6 class="card-text">London, UK ☀️</h6>
+          <p>Temp: 16°C</p>
+          <p>Wind: 2.15 KPH</p>
+          <p>Humidity: 67%</p>
         </div>
       </div>
+
     </div>
-    <div class="row">
-      <div class="card" style="width: 18rem;">
+    <div class="d-flex flex-row">
+
+      <div id="things-to-do" class="card w-50 mt-4 me-5">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Things to do</h5>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
+
+      <div id="movies" class="card w-50 mt-4">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Movies</h5>
+          <h6>Ratatouille, 2007</h6>
+          <img src="./assets/img/ratatouille.jpg" alt="Ratatouille poster" class="movie-poster">
+          <p class="card-text">A rat who can cook makes an unusual alliance with a young kitchen worker at a famous
+            Paris restaurant.</p>
         </div>
       </div>
+
     </div>
   </section>
-    <section class="container-fluid mb-5">
-        <div class="d-flex flex-row">
 
-            <div id="points-of-interest" class="card w-75 mt-4 me-5">
-                <div class="card-body">
-                  <h5 class="card-title">Points of interest</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-            </div>
-
-            <div id="weather" class="card w-25 mt-4">
-                <div class="card-body">
-                  <h5 class="card-title">Weather</h5>
-                  <h6 class="card-text">London, UK ☀️</h6>
-                  <p>Temp: 16°C</p>
-                  <p>Wind: 2.15 KPH</p>
-                  <p>Humidity: 67%</p>
-                </div>
-            </div>
-
-        </div>
-        <div class="d-flex flex-row">
-
-            <div id="things-to-do" class="card w-50 mt-4 me-5">
-                <div class="card-body">
-                  <h5 class="card-title">Things to do</h5>
-                  <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                  </ul>
-                </div>
-            </div>
-
-              <div id="movies" class="card w-50 mt-4">
-                <div class="card-body">
-                  <h5 class="card-title">Movies</h5>
-                  <h6>Ratatouille, 2007</h6>
-                  <img src="./assets/img/ratatouille.jpg" alt="Ratatouille poster" class="movie-poster">
-                  <p class="card-text">A rat who can cook makes an unusual alliance with a young kitchen worker at a famous Paris restaurant.</p>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="container-fluid">
-        <!-- <div class="row">
+  <section class="container-fluid">
+    <!-- <div class="row">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -151,36 +115,8 @@
                 </div>
             </div>
         </div> -->
-    </section>
-
-  <section class="container-fluid">
-    <div class="row">
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
   </section>
+
 
   <footer>
 
