--- a/landing.html
+++ b/landing.html
@@ -55,10 +55,7 @@
       <div id="weather" class="card w-25 mt-4">
         <div class="card-body">
           <h5 class="card-title">Weather</h5>
-          <h6 class="card-text">London, UK ☀️</h6>
-          <p>Temp: 16°C</p>
-          <p>Wind: 2.15 KPH</p>
-          <p>Humidity: 67%</p>
+          <div id="today"></div>
         </div>
       </div>
 
@@ -123,14 +120,17 @@
   </footer>
 
 
+
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="./assets/js/script.js"></script>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/weather.js"></script>
 </body>
 
 </html>
