fixed bug in script.js

--- a/landing.html
+++ b/landing.html
@@ -45,11 +45,7 @@
     <div class="d-flex flex-row">
 
       <div id="points-of-interest" class="card w-75 mt-4 me-5">
-        <div class="card-body">
-          <h5 class="card-title">Points of interest</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-        </div>
+
       </div>
 
       <div id="weather" class="card w-25 mt-4">
@@ -114,7 +110,6 @@
         </div> -->
   </section>
 
-
   <footer>
 
   </footer>
@@ -131,6 +126,7 @@
 
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/weather.js"></script>
+  <script src="./assets/js/amadeus.js"></script>
 </body>
 
 </html>
