--- a/landing.html
+++ b/landing.html
@@ -5,19 +5,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./assets/css/styles.css" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <!-- CSS -->
+  <link rel="stylesheet" href="./assets/css/styles.css"/>
   <title>Curio City</title>
 </head>
 
 <body>
+
+  <!-- Navbar Code -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      <a class="landing-logo" href="index.html">
+        <img src="./assets/img/logo.png" alt="logo" width="70" class="d-inline-block align-text-top">
+      </a>
+      <div class="collapse navbar-collapse">
+        <h3>Embark on a Journey of Wonders with CurioCity!</h3>
+      </div>
+      <button class="btn btn-sm" type="button">Get in touch</button>
+    </div>
+  </nav>
+
   <!-- Navigation Bar -->
 
-  <nav class="navbar bg-body-tertiary">
+  <!-- <nav class="navbar bg-body-tertiary">
     <div class="container">
       <a class="landing-logo" href="index.html">
         <img src="./assets/img/logo.png" alt="logo" width="60" class="d-inline-block align-text-top">
@@ -25,7 +39,7 @@
       <h3>Embark on a Journey of Wonders with CurioCity!</h3>
       <button class="navbar-button" a href="#">Get in touch</button>
     </div>
-  </nav>
+  </nav> -->
   <!-- Navigation Bar Ends -->
 
   <!-- Hero Section -->
