--- a/landing.html
+++ b/landing.html
@@ -28,31 +28,18 @@
       <button class="btn btn-sm" type="button">Get in touch</button>
     </div>
   </nav>
-
-  <!-- Navigation Bar -->
-
-  <!-- <nav class="navbar bg-body-tertiary">
-    <div class="container">
-      <a class="landing-logo" href="index.html">
-        <img src="./assets/img/logo.png" alt="logo" width="60" class="d-inline-block align-text-top">
-      </a>
-      <h3>Embark on a Journey of Wonders with CurioCity!</h3>
-      <button class="navbar-button" a href="#">Get in touch</button>
-    </div>
-  </nav> -->
-  <!-- Navigation Bar Ends -->
+  <div class="b-example-divider"></div>
 
   <!-- Hero Section -->
-  <section class="hero container-fluid text-center">
-    <div class="welcome">
-      <div id="welcome-text">
-        <h2 class="destination-title">Paris, France</h2>
-        <p class="destination-description">The Eiffel Tower was supposed to be a temporary installation, intended to
-          stand for 20 years after being built
-          for the 1889 World Fair.</p>
+  <div class="px-4 py-5 my-5 text-center hero">
+    <h1 class="display-5 fw-bold destination-title">Paris, France</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4 destination-text">The Eiffel Tower was supposed to be a temporary installation, intended to
+        stand for 20 years after being built
+        for the 1889 World Fair.</p>
       </div>
     </div>
-  </section>
+  </div>
   <!-- End of Hero Section -->
 
   <section class="container-fluid mb-5">
