--- a/index.html
+++ b/index.html
@@ -5,38 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="./assets/css/homepage.css" />
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+  <!-- CSS -->
+  <link rel="stylesheet" href="./assets/css/homepage.css"/>
   <title>Curio City</title>
 </head>
 
 <body>
-
   <div class="px-4 py-5 my-5 text-center background">
     <img class="d-block mx-auto mb-4" src="./assets/img/logo.png" alt="" width="400" height="400">
     <h1 class="display-5 fw-bold text-body-emphasis">Which city you want to visit?</h1>
     <div class="col-lg-6 mx-auto">
-<<<<<<< HEAD
       <input type="text" class="form-control m-3" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
         <button type="button" class="btn btn-outline-secondary btn-lg px-4">I'm feeling lucky!</button>
       </div>
-=======
-      <form id="cityForm">
-        <input type="text" id="cityInput" class="form-control m-3" aria-label="City name" aria-describedby="inputGroup-sizing-default">
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
-          <button type="button" class="btn btn-outline-secondary btn-lg px-4">I feel lucky!</button>
-        </div>
-      </form>
->>>>>>> main
     </div>
   </div>
-
   <!-- Day.js -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
