--- a/index.html
+++ b/index.html
@@ -2,38 +2,44 @@
 <html lang="en-gb">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <!-- CSS -->
-  <link rel="stylesheet" href="./assets/css/homepage.css"/>
-  <title>Curio City</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous">
+    <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/homepage.css" />
+    <title>CurioCity - Discover and Explore Cities Around the World</title>
 </head>
 
 <body>
-  <div class="px-4 py-5 my-5 text-center background">
-    <img class="d-block mx-auto mb-4" src="./assets/img/logo.png" alt="" width="400" height="400">
-    <h1 class="display-5 fw-bold text-body-emphasis">Which city do you want to visit?</h1>
-    <div class="col-lg-6 mx-auto">
-      <input type="text" class="form-control m-3" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
-        <button type="button" id="luckyButton" class="btn btn-outline-secondary btn-lg px-4">I'm feeling lucky!</button>
-      </div>
+    <div class="px-4 py-5 my-5 text-center background">
+        <img class="d-block mx-auto mb-4" src="./assets/img/logo.png" alt="" width="400" height="400">
+        <h1 class="display-5 fw-bold text-body-emphasis">Which city do you want to visit?</h1>
+        <div class="col-lg-6 mx-auto">
+            <form id="cityForm">
+                <input type="text" id="cityInput" class="form-control m-3" aria-label="City input"
+                    aria-describedby="inputGroup-sizing-default">
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
+                    <button type="button" id="luckyButton" class="btn btn-outline-secondary btn-lg px-4">I'm feeling lucky!</button>
+                </div>
+            </form>
+        </div>
     </div>
-  </div>
 
-  <script src="./assets/js/script.js"></script>
-  
-  <!-- Day.js -->
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./assets/js/script.js"></script>
+    <!-- Day.js -->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
