--- a/index.html
+++ b/index.html
@@ -24,18 +24,23 @@
                 <input type="text" id="cityInput" class="form-control m-3" aria-label="City input"
                     aria-describedby="inputGroup-sizing-default">
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                    <button type="submit" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
+                    <button type="submit" id="searchButton" class="btn btn-primary btn-lg px-4 gap-3">Search</button>
                     <button type="button" id="luckyButton" class="btn btn-outline-secondary btn-lg px-4">I'm feeling lucky!</button>
                 </div>
             </form>
         </div>
     </div>
 
+    <div id="imageHere"></div>
+
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script src="./assets/js/flickr.js"></script>
     <script src="./assets/js/script.js"></script>
     <!-- Day.js -->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <!-- jQuery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
