--- a/landing.html
+++ b/landing.html
@@ -128,6 +128,7 @@
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/weather.js"></script>
   <script src="./assets/js/amadeus.js"></script>
+  <script src="./assets/js/movies.js"></script>
 </body>
 
 </html>
