updated hero section and weather API

--- a/landing.html
+++ b/landing.html
@@ -32,31 +32,36 @@
 
   <!-- Hero Section -->
   <div class="px-4 py-5 my-5 text-center hero">
-    <h1 class="display-5 fw-bold destination-title">Paris, France</h1>
+    
+    <!-- <h1 class="display-5 fw-bold destination-title">Paris, France</h1>
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4 destination-text">The Eiffel Tower was supposed to be a temporary installation, intended to
         stand for 20 years after being built
         for the 1889 World Fair.</p>
       </div>
-    </div>
-  </div>
-  <!-- End of Hero Section -->
-
-  <section class="container-fluid mb-5">
+    </div> -->
     <div class="d-flex flex-row">
 
-      <div id="points-of-interest" class="card w-75 mt-4 me-5">
+      <div class="card w-25">
 
-      </div>
+        <img src="./assets/img/paris.jpg" alt="">
 
-      <div id="weather" class="card w-25 mt-4">
-        <div class="card-body">
-          <h5 class="card-title">Weather</h5>
-          <div id="today"></div>
+        <div id="weather" class="card">
+          <div class="card-body">
+            <div id="today"></div>
+          </div>
         </div>
       </div>
 
+      <div id="main-card" class="card w-75">
+
+      </div>
+
     </div>
+
+  </div>
+
+  <section class="container-fluid mb-5">
     <div class="d-flex flex-row">
 
       <div id="things-to-do" class="card w-50 mt-4 me-5">
