updated flickr.js file - now the photo of the city is displayed in landing page

--- a/landing.html
+++ b/landing.html
@@ -44,7 +44,7 @@
 
       <div class="card w-25">
 
-        <img src="./assets/img/paris.jpg" alt="">
+        <div id="image-city"></div>
 
         <div id="weather" class="card">
           <div class="card-body">
