--- a/landing.html
+++ b/landing.html
@@ -31,21 +31,10 @@
   <div class="b-example-divider"></div>
 
   <!-- Hero Section -->
-  <div class="px-4 py-5 my-5 text-center hero">
-    
-    <!-- <h1 class="display-5 fw-bold destination-title">Paris, France</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4 destination-text">The Eiffel Tower was supposed to be a temporary installation, intended to
-        stand for 20 years after being built
-        for the 1889 World Fair.</p>
-      </div>
-    </div> -->
+  <section class="px-4 py-5 mt-5 text-center">
     <div class="d-flex flex-row">
-
       <div class="card w-25">
-
         <div id="image-city"></div>
-
         <div id="weather" class="card">
           <div class="card-body">
             <div id="today"></div>
@@ -53,18 +42,15 @@
         </div>
       </div>
 
-      <div id="main-card" class="card w-75">
-
-      </div>
-
+      <div id="main-card" class="card w-75"></div>
     </div>
+  </section>
 
-  </div>
-
-  <section class="container-fluid mb-5">
+  <!-- Section with cards -->
+  <section class="px-4">
     <div class="d-flex flex-row">
 
-      <div id="things-to-do" class="card w-50 mt-4 me-5">
+      <div id="things-to-do" class="card w-50 me-4">
         <div class="card-body">
           <h5 class="card-title">Things to do</h5>
           <ul>
@@ -77,7 +63,7 @@
         </div>
       </div>
 
-      <div id="movies" class="card w-50 mt-4">
+      <div id="movies" class="card w-50">
         <div class="card-body">
           <h5 class="card-title">Movies</h5>
           <h6>Ratatouille, 2007</h6>
@@ -90,32 +76,7 @@
     </div>
   </section>
 
-  <section class="container-fluid">
-    <!-- <div class="row">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-            </div>
-        </div> -->
-  </section>
-
+  <!-- Footer -->
   <footer class="py-5">
     <div class="container">
     <div class="row">
