--- a/landing.html
+++ b/landing.html
@@ -63,16 +63,29 @@
         </div>
       </div>
 
-      <div id="movies" class="card w-50">
+      <div class="card w-50 movies-card">
         <div class="card-body">
           <h5 class="card-title">Movies</h5>
-          <h6>Ratatouille, 2007</h6>
-          <img src="./assets/img/ratatouille.jpg" alt="Ratatouille poster" class="movie-poster">
-          <p class="card-text">A rat who can cook makes an unusual alliance with a young kitchen worker at a famous
-            Paris restaurant.</p>
+          <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div id="movies" class="carousel-inner">
+
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
         </div>
       </div>
-
     </div>
   </section>
 
