--- a/landing.html
+++ b/landing.html
@@ -59,16 +59,30 @@
     </div>
     <div class="d-flex flex-row">
 
-      <div id="things-to-do" class="card w-50 mt-4 me-5">
+      <div id="currency-converter" class="card w-50 mt-4">
         <div class="card-body">
-          <h5 class="card-title">Things to do</h5>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+          <h5 class="card-title">Currency Exchanger</h5>
+          <div class="d-flex justify-content-between">
+            <div class="input-group mb-3">
+              <select id="fromCurrency" class="form-select">
+                <!-- Options for currency -->
+              </select>
+            </div>
+            <div>
+              <input type="number" id="amount" class="form-control" placeholder="Amount" aria-label="Amount">
+            </div>
+            <div class="input-group mb-3">
+              <select id="toCurrency" class="form-select">
+                <!-- Options for currency -->
+              </select>
+            </div>
+            <div>
+              <button onclick="convertCurrency()" class="btn btn-primary">Convert</button>
+            </div>
+          </div>
+          <div id="result" class="result-style">
+            <!-- Conversion result will appear here -->
+          </div>
         </div>
       </div>
 
@@ -176,6 +190,7 @@
   <script src="./assets/js/weather.js"></script>
   <script src="./assets/js/amadeus.js"></script>
   <script src="./assets/js/movies.js"></script>
+  <script src="./assets/js/currency_exchange.js"></script>
 </body>
 
 </html>
