--- a/landing.html
+++ b/landing.html
@@ -50,16 +50,8 @@
   <section class="px-4">
     <div class="d-flex flex-row">
 
-      <div id="things-to-do" class="card w-50 me-4">
-        <div class="card-body">
-          <h5 class="card-title">Things to do</h5>
-          <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ul>
+      <div class="card w-50 me-4">
+        <div id="food" class="card-body">
         </div>
       </div>
 
