added edamam API to display food based on the city name

--- a/landing.html
+++ b/landing.html
@@ -148,6 +148,7 @@
   <script src="./assets/js/amadeus.js"></script>
   <script src="./assets/js/flickr.js"></script>
   <script src="./assets/js/movies.js"></script>
+  <script src="./assets/js/edamam.js"></script>
 </body>
 
 </html>
