updated landing page comments

--- a/landing.html
+++ b/landing.html
@@ -46,7 +46,7 @@
     </div>
   </section>
 
-  <!-- Section with cards -->
+  <!-- Section with movies and food cards -->
   <section class="px-4">
     <div class="d-flex flex-row">
 
@@ -152,11 +152,3 @@
 </body>
 
 </html>
-
-<!-- PSEUDOCODE -->
-<!-- create navbar with logo image - link to go to homepage (left side); get in touch (right side) -->
-<!-- hero section with background image of the city + a card with the name of the city, country and short description of a place -->
-<!-- first row: 2 columns: card with points of interest and card with weather info -->
-<!-- second row: 2 columns: card with things to do and card with movies -->
-<!-- *carousel with suggested cities -->
-<!-- footer: social media buttons, copyrights -->
