first glance at the currency_exchanger.js

--- a/landing.html
+++ b/landing.html
@@ -145,6 +145,7 @@
 
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/weather.js"></script>
+  <script src="./assets/js/currency_exchange.js"></script>
   <script src="./assets/js/amadeus.js"></script>
   <script src="./assets/js/flickr.js"></script>
   <script src="./assets/js/movies.js"></script>
