Changed description of a page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <div class="container-centered">
     <div class="px-4 py-5 my-5 text-center background">
         <img class="d-block mx-auto mb-4" src="./assets/img/logo.png" alt="" width="400" height="400">
-        <h1 class="display-5 fw-bold text-body-emphasis">Which city do you want to visit?</h1>
+        <h1 class="display-5 fw-bold text-body-emphasis">Ready to explore? Where to?</h1>
+        <h6>Please type in a city!</h6>
         <div class="col-lg-6 mx-auto">
             <form id="cityForm">
                 <input type="text" id="cityInput" class="form-control m-3" aria-label="City input"
