--- a/landing.html
+++ b/landing.html
@@ -145,7 +145,7 @@
 
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/weather.js"></script>
-  <script src="./assets/js/amadeus.js"></script>
+  <!-- <script src="./assets/js/amadeus.js"></script> -->
   <script src="./assets/js/flickr.js"></script>
   <script src="./assets/js/movies.js"></script>
   <script src="./assets/js/edamam.js"></script>
