--- a/landing.html
+++ b/landing.html
@@ -38,6 +38,7 @@
         <div id="weather" class="card">
           <div class="card-body">
             <div id="today"></div>
+            <div id="currency-exchange"></div>
           </div>
         </div>
       </div>
