changed the place of the currency exchange card

--- a/landing.html
+++ b/landing.html
@@ -38,12 +38,13 @@
         <div id="weather" class="card">
           <div class="card-body">
             <div id="today"></div>
-            <div id="currency-exchange"></div>
           </div>
         </div>
       </div>
 
-      <div id="main-card" class="card w-75"></div>
+      <div id="main-card" class="card w-75">
+        <div id="currency-exchange"></div>
+      </div>
     </div>
   </section>
 
