--- a/landing.html
+++ b/landing.html
@@ -94,17 +94,24 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="py-5">
-    <div class="container">
-    <div class="row">
-      <div class="col-6 col-md-2 mb-3">
-
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-      <p>© 2023 CurioCity, Inc. All rights reserved.</p>
+<!-- Footer -->
+<footer class="py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 text-center mb-3">
+        <p class="text-muted small">© 2024 CurioCity, Inc. All rights reserved.</p>
+      </div>
+      <div class="col-12 text-center">
+        <!-- GitHub Links -->
+        <a href="https://github.com/Contributor1" class="me-2">Contributor 1</a>
+        <a href="https://github.com/Contributor2" class="me-2">Contributor 2</a>
+        <a href="https://github.com/Contributor3" class="me-2">Contributor 3</a>
+        <a href="https://github.com/Contributor4" class="me-2">Contributor 4</a>
+        <a href="https://github.com/Contributor5" class="me-2">Contributor 5</a>
+      </div>
     </div>
-</div>
-  </footer>
+  </div>
+</footer>
 
 
 
