--- a/landing.html
+++ b/landing.html
@@ -129,9 +129,11 @@
     crossorigin="anonymous"></script>
 
   <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/description.js"></script>
   <script src="./assets/js/weather.js"></script>
   <script src="./assets/js/currency_exchange.js"></script>
   <script src="./assets/js/flickr.js"></script>
   <script src="./assets/js/movies.js"></script>
   <script src="./assets/js/edamam.js"></script>
+
 </body>
