--- a/landing.html
+++ b/landing.html
@@ -12,19 +12,59 @@
   <title>Curio City</title>
 </head>
 <body>
+
   <!-- Navbar Code -->
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top">
+    <!-- <div class="container-fluid">
       <a class="landing-logo" href="index.html">
         <img src="./assets/img/logo.png" alt="logo" width="70" class="d-inline-block align-text-top">
       </a>
       <div class="collapse navbar-collapse">
         <h3>Embark on a Journey of Wonders with CurioCity!</h3>
       </div>
-      <button class="btn btn-sm" type="button">Get in touch</button>
+      <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Pages
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="#weather">Weather</a>
+          <a class="dropdown-item" href="#currency-exchange">Currency Exchange</a>
+          <a class="dropdown-item" href="#food">Recipes</a>
+          <a class="dropdown-item" href=".movies-card">Movies</a>
+        </div>
+      </div>
+      <button class="btn btn-sm" type="button" href="www.google.com">Get in touch</button> -->
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light container-fluid">
+        <div class="container-fluid">
+          <a class="landing-logo" href="index.html">
+            <img src="./assets/img/logo.png" alt="logo" width="70" class="d-inline-block align-text-top">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#weather">Weather</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#currency-exchange">Currency</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#food">Recipes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#movies">Movies</a>
+              </li>
+            </ul>
+          </div>
+          <button class="btn btn-sm" type="button" href="www.google.com">Get in touch</button> 
+        </div>
+      </nav>
     </div>
-  </nav>
-  <div class="b-example-divider"></div>
+</nav>
+
   <!-- Hero Section -->
   <section class="px-4 py-5 mt-5 text-center">
     <div class="d-flex flex-row">
@@ -46,8 +86,7 @@
   <section class="px-4">
     <div class="d-flex flex-row">
       <div class="card w-50 me-4">
-        <div id="food" class="card-body">
-        </div>
+        <div id="food" class="card-body"></div>
       </div>
       <div class="card w-50 movies-card">
         <div class="card-body">
