Added new title to the page

--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/styles.css"/>
-  <title>Curio City</title>
+  <title>CurioCity - Here are your results!</title>
 </head>
 <body>
   <!-- Navbar Code -->
