--- a/landing.html
+++ b/landing.html
@@ -37,8 +37,8 @@
         </div>
       </div>
       <div class="card w-75 mainCard">
-        <div id="description" class="card m-3"></div>
-        <div id="currency-exchange" class="card m-3"></div>
+        <div id="description" class="card m-3 px-4"></div>
+        <div id="currency-exchange" class="card m-3 px-4"></div>
       </div>
     </div>
   </section>
