added mailto hyperlink to get in touch button

--- a/landing.html
+++ b/landing.html
@@ -37,37 +37,9 @@
             <a class="dropdown-item" href=".movies-card">Movies</a>
           </div>
         </div>
-        <button class="btn btn-sm" type="button" href="www.google.com">Get in touch</button>
+        <a class="btn btn-sm" href="mailto:recipient@example.com">Get in touch</a>
       </div>
   </nav>
-
-  <!-- <nav class="navbar navbar-expand-lg navbar-light container-fluid">
-        <div class="container-fluid navbar">
-          <a class="landing-logo" href="index.html">
-            <img src="./assets/img/logo.png" alt="logo" width="70" class="d-inline-block align-text-top">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#weather">Weather</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#currency-exchange">Currency</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#food">Recipes</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#movies">Movies</a>
-              </li>
-            </ul>
-          </div>
-          <button class="btn btn-sm" type="button" href="www.google.com">Get in touch</button> 
-        </div>
-      </nav>
 
   <!-- Hero Section -->
   <section class="px-4 py-5 mt-5 text-center">
