fixed movies link in navbar

--- a/landing.html
+++ b/landing.html
@@ -34,7 +34,7 @@
             <a class="dropdown-item" href="#weather">Weather</a>
             <a class="dropdown-item" href="#currency-exchange">Currency Exchange</a>
             <a class="dropdown-item" href="#food">Recipes</a>
-            <a class="dropdown-item" href=".movies-card">Movies</a>
+            <a class="dropdown-item" href="#movies">Movies</a>
           </div>
         </div>
         <a class="btn btn-sm" href="mailto:recipient@example.com">Get in touch</a>
@@ -64,7 +64,7 @@
       <div class="card w-50 me-4">
         <div id="food" class="card-body"></div>
       </div>
-      <div class="card w-50 movies-card">
+      <div id="movies" class="card w-50 movies-card">
         <div class="card-body">
           <h5 class="card-title">Movies</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
