Fixed movies bug

--- a/landing.html
+++ b/landing.html
@@ -64,7 +64,7 @@
       <div class="card w-50 me-4">
         <div id="food" class="card-body"></div>
       </div>
-      <div id="movies" class="card w-50 movies-card">
+      <div class="card w-50 movies-card movies">
         <div class="card-body">
           <h5 class="card-title">Movies</h5>
           <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
