Added creators to footer with link to GitHub

--- a/landing.html
+++ b/landing.html
@@ -94,16 +94,18 @@
   <footer class="py-2">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 text-center mb-3">
+        <div class="col-12 text-center mb-1">
           <p class="text-muted small">© 2024 CurioCity, Inc. All rights reserved.</p>
         </div>
+        <div class="col-12 text-center mb-1">
+          <p class="text-muted small">Creators :</p>
+        </div>
         <div class="col-12 text-center">
-          <!-- GitHub Links -->
-          <a href="https://github.com/Contributor1" class="me-2">Contributor 1</a>
-          <a href="https://github.com/Contributor2" class="me-2">Contributor 2</a>
-          <a href="https://github.com/Contributor3" class="me-2">Contributor 3</a>
-          <a href="https://github.com/Contributor4" class="me-2">Contributor 4</a>
-          <a href="https://github.com/Contributor5" class="me-2">Contributor 5</a>
+          <a href="https://github.com/paulinasiwko" class="me-2">Paulina Siwko</a>
+          <a href="https://github.com/Nirmean" class="me-2">Nirmean Sawi</a>
+          <a href="https://github.com/Contributor3" class="me-2">Divine Ede</a>
+          <a href="https://github.com/TomixJasina" class="me-2">Tomasz Jasinski</a>
+          <a href="https://github.com/MrKatrish" class="me-2">Michal Paleczny</a>
         </div>
       </div>
     </div>
