--- a/landing.html
+++ b/landing.html
@@ -112,6 +112,7 @@
     </footer>
     </div>
   </footer>
+  <!-- Day.JS -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
