--- a/landing.html
+++ b/landing.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
       <a class="landing-logo" href="index.html">
-        <img src="./assets/img/logo.png" alt="logo" width="70" class="d-inline-block align-text-top">
+        <img src="./assets/img/logo.png" alt="logo" width="60" class="landing-logo">
       </a>
       <div class="collapse navbar-collapse">
         <h3>Embark on a Journey of Wonders with CurioCity!</h3>
