changed localstorage functionality to target also I'm feeling lucky button

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                 </div>
             </form>
         </div>
+        <div id="recentCitiesContainer">
+            <p id="historyParagraph" class="recent-searches-description m-3 hidden">Your recent searches:</p>
+        </div>
     <footer>
         <div class="footer-container">
             <p>© 2024 CurioCity, Inc. All rights reserved.</p>
