fixed homepage footer

--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@
         <div id="recentCitiesContainer">
             <p id="historyParagraph" class="recent-searches-description m-3 hidden">Your recent searches:</p>
         </div>
-    <footer>
-        <div class="footer-container">
+        <div class="homepage-footer">
             <p>© 2024 CurioCity, Inc. All rights reserved.</p>
         </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
